fix for clear visibility

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body{
 
     display:inline;
     text-align: left;
-    margin: 0rem 0.25rem 0.25rem 0.25rem;
+    margin: 0.50rem 0.25rem 0.25rem 0.25rem;
     
 }
 
